trunk (unreleased)
* Fix a serious race condition exposed when multiple threads access
  the same block device

1.1.0 (16-Dec-2013)
* Expose the `blkgetsize` function in the external signature.
* Regenerate build files with OASIS 0.4.0

1.0.0 (08-Dec-2013)
* depend on mirage-types-0.4.0+
* catch low-level I/O errors and return an `Error
* Reformat with `ocp-indent` to deal with the outrageously large monitors that Citrix use.

0.1.1 (2-Dec-2013)
* add missing file

0.1.0 (1-Dec-2013)
* import first version of block driver from ocaml-fat